--- a/gb/20/1/27/n11824622.md
+++ b/gb/20/1/27/n11824622.md
@@ -1,54 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jtswrk284/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jtswrk284/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqfyre3945/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqfyre3945/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqfyre3945/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqfyre3945/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqfyre3945/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>皇后购物中心醒狮起舞庆祝黄历新年</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月27日讯】为庆祝农历新年，25日中午位于艾姆赫斯特（Elmhurst）的<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%9A%87%E5%90%8E%E8%B4%AD%E7%89%A9%E4%B8%AD%E5%BF%83.md">皇后购物中心</a>（Queens Center Mall）与Asian InNY联合举办免费表演，数以千计不同族裔人士在周未到皇后购物中心围观和参与，分享了农历新年的热闹与吉祥如意。</p>
-<figure id="11824628" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/972beb12815e16721b58254f0075fd1f-450x600.jpg" alt="图为小朋友穿向新年红衣大家拜年。" width="500" /><figcaption class="wp-caption-text">图为小朋友穿向新年红衣大家拜年。（“亚洲人在纽约”提供）</figcaption></figure>
-<figure id="11824626" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/607b00dd21773fbfd0615fc856b2b4e8-450x530.jpg" alt="图为纽约民众在皇后购物中心和Asian InNY联合举办的新年活动学习制作纸灯笼。" width="500" /><figcaption class="wp-caption-text">图为纽约民众在<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%9A%87%E5%90%8E%E8%B4%AD%E7%89%A9%E4%B8%AD%E5%BF%83.md">皇后购物中心</a>和Asian InNY联合举办的新年活动学习制作纸灯笼。（“亚洲人在纽约”提供）</figcaption></figure>
-<figure id="11824625" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/3939a10259648bba66a90693c67aea19-450x800.jpg" alt="图为华人孩子在皇后购物中心和Asian InNY联合举办的新年活动上表演。" width="500" /><figcaption class="wp-caption-text">图为华人孩子在皇后购物中心和Asian InNY联合举办的新年活动上表演。（“亚洲人在纽约”提供）</figcaption></figure>
-<figure id="11824624" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/01/6bf85ab510bfd7cf855691e442e2a338-450x300.jpg" alt="图为舞龙舞狮表演，充满黄历新年节庆的气氛。" width="500" /><figcaption class="wp-caption-text">图为舞龙舞狮表演，充满<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E9%BB%84%E5%8E%86%E6%96%B0%E5%B9%B4.md">黄历新年</a>节庆的气氛。（“亚洲人在纽约”提供）</figcaption></figure>
+	<p>【大纪元2020年01月27日讯】为庆祝农历新年，25日中午位于艾姆赫斯特（Elmhurst）的<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E7%9A%87%E5%90%8E%E8%B4%AD%E7%89%A9%E4%B8%AD%E5%BF%83.md#1">皇后购物中心</a>（Queens Center Mall）与Asian InNY联合举办免费表演，数以千计不同族裔人士在周未到皇后购物中心围观和参与，分享了农历新年的热闹与吉祥如意。</p>
+<figure id="11824628" aria-describedby="caption-11824628" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/972beb12815e16721b58254f0075fd1f-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/972beb12815e16721b58254f0075fd1f-450x600.jpg" alt="图为小朋友穿向新年红衣大家拜年。" width="500" /></a><figcaption id="caption-11824628" class="wp-caption-text">图为小朋友穿向新年红衣大家拜年。（“亚洲人在纽约”提供）</figcaption></figure>
+<figure id="11824626" aria-describedby="caption-11824626" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/607b00dd21773fbfd0615fc856b2b4e8-450x530.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/607b00dd21773fbfd0615fc856b2b4e8-450x530.jpg" alt="图为纽约民众在皇后购物中心和Asian InNY联合举办的新年活动学习制作纸灯笼。" width="500" /></a><figcaption id="caption-11824626" class="wp-caption-text">图为纽约民众在<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E7%9A%87%E5%90%8E%E8%B4%AD%E7%89%A9%E4%B8%AD%E5%BF%83.md#1">皇后购物中心</a>和Asian InNY联合举办的新年活动学习制作纸灯笼。（“亚洲人在纽约”提供）</figcaption></figure>
+<figure id="11824625" aria-describedby="caption-11824625" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/3939a10259648bba66a90693c67aea19-450x800.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/3939a10259648bba66a90693c67aea19-450x800.jpg" alt="图为华人孩子在皇后购物中心和Asian InNY联合举办的新年活动上表演。" width="500" /></a><figcaption id="caption-11824625" class="wp-caption-text">图为华人孩子在皇后购物中心和Asian InNY联合举办的新年活动上表演。（“亚洲人在纽约”提供）</figcaption></figure>
+<figure id="11824624" aria-describedby="caption-11824624" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/01/6bf85ab510bfd7cf855691e442e2a338-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/01/6bf85ab510bfd7cf855691e442e2a338-450x300.jpg" alt="图为舞龙舞狮表演，充满黄历新年节庆的气氛。" width="500" /></a><figcaption id="caption-11824624" class="wp-caption-text">图为舞龙舞狮表演，充满<ahref="https://github.com/oqfyre3945/djy/blob/master/gb/tag/%E9%BB%84%E5%8E%86%E6%96%B0%E5%B9%B4.md#1">黄历新年</a>节庆的气氛。（“亚洲人在纽约”提供）</figcaption></figure>
 <p>此次活动中的传统亚洲文化表演包括舞狮、民族舞蹈、传统乐器、彩带舞、歌曲表演、剪纸和灯笼制作等。皇后购物中心还送出将近一万元等值的礼物给最早参加活动的200位人士。</p>
 <p>在视频网站YouTube点阅率超过2,300万的“红人”博主陈慧玲（Jenny W. Chen）现场教孩子们用画笔制作新年手工艺品。陈慧玲也希望通过教授外族裔孩子制作中国艺术品手工的方式，让各族裔孩子从小了解并接受华裔文化。</p>
 <p>今年是第6次举办庆新春活动，随着皇后区华人数量增加，市场不断扩大，皇后购物中心希望通过庆祝新年的活动，让市民更了解农历新年，帮助店家促销。皇后购物中心的市场部经理Sara?McGuinness表示，“我们提供平台，让皇后区的邻里互相分享文化。即使不是来自亚洲，我们也希望学到一些亚裔文化。亚裔社区在皇后区是一个很大的社区，而且还在发展壮大。特别是艾姆赫斯特（Elmhurst）和法拉盛（Flushing）﹐来自中国和其它地区的新移民在不停地进来。更重要的是他们已经成为我们购物中心的一个很大的顾客群。所以我们举办这个活动，和不同族裔朋友们一起庆祝农历新年，以此体验不同亚洲文化。能让背景不同的顾客互相学习，增进了解”。◇</p>
 <p>责任编辑：家瑞</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824622.htm">皇后购物中心醒狮起舞庆祝黄历新年</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824264.htm">继美法后 韩国亦欲安排专机从武汉撤侨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824266.htm">美国华人：为什么瘟疫始于武汉</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824233.htm">美专家：从武汉归来 惊讶官方对疫情不动声色</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824150.htm">上百公民受困武汉 法国政府派专机撤侨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823658.htm">武汉医院到底多紧张 外媒访问揭实情</a></li>
-> <li><a href="https://github.com/jtswrk284/djy/blob/master/gb/20/1/26/n11823658.md">武汉医院到底多紧张 外媒访问揭实情</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823668.htm">捐赠者指医疗物资被红会切断 官员也抢夺物资</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823586.htm">【快讯】直升机坠毁9死 NBA巨星科比遇难</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823690.htm">网民爆料肺炎疫情真相震惊社会 中共急封口</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823181.htm">李克强首开应对疫情领导小组会 泄多个秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/5/n11768578.htm">苏东坡书迹第一《寒食帖》荡过人生低谷的净与美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/7/2/12/n1621075.htm">丢勒兄弟的手</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821017.htm">大陆开启封路模式 封城封路封村封户</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821057.htm">专家：武汉肺炎源头或来自中共病毒实验室</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821056.htm">上海疫情严峻 启动一级回应机制</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819138.htm">【新闻看点】武汉肺炎民众大逃亡 传中共抓捕</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819752.htm">纽约市长现身火场 关注华埠灾后安置（影音）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821374.htm">武汉人恐慌无助 网络上求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818809.htm">陆剧《急诊科医生》 3年前演绎“武汉肺炎”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819909.htm">子瑜体恤医护人员辛劳 盼新年大家平安健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11822832.htm">关心武汉封城惨况 台女星：愿大家都平安</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819130.htm">港星林利抗癌成功 除夕夜发文：癌指数跑光光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823229.htm">武汉肺炎蔓延 刘德华第三度取消演唱会</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/22/1/26/n13529950.md#1">睽违两年 纽约国际车展将于4月回归</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/22/1/26/n13529953.md#1">马籍华侨异乡猝逝 家属酬谢MAA协寻</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/22/1/26/n13529956.md#1">皇后区地检 2月3日将举办黄历新年庆祝活动</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/22/1/26/n13529959.md#1">新州金属回收场大火 影响纽约市空气质量</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jtswrk284/djy/blob/master/gb/20/1/27/n11824622.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/26/n2976689.md#1" target="_blank">鲜为人知的马克思之六：信神的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/1/8/n4337245.md#1" target="_blank">欧阳非：中共法官们的荒唐言论（1）</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11964881.md#1">武汉病例清零内幕被曝光 北京通知露端倪</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
+<li><a href="https://github.com/oqfyre3945/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqfyre3945/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqfyre3945/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/27/n11824622.htm">皇后购物中心醒狮起舞庆祝黄历新年</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqfyre3945/djy/blob/master/gb/20/1/27/n11824622.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqfyre3945/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqfyre3945/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqfyre3945/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqfyre3945/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
